clang/test/BSC/Negative/SafeZone/borrow_check_function_decl/borrow_check_function_decl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// If the function declaration and function implementation are inconsistent,
// a compilation error is reported

_Safe void test_1(int * _Owned p);    // expected-note {{previous declaration is here}}
_Safe void test_1(int * p) {
}                                   // expected-error@-1 {{conflicting types for 'test_1'}}

_Safe void test_1_0(int * _Owned p);    // expected-note {{previous declaration is here}}
_Safe void test_1_0(_Owned int * p) {   // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}                                     // expected-error@-1 {{conflicting types for 'test_1_0'}}

_Safe void test_1_1(int * _Owned p);           // expected-note {{previous declaration is here}}
_Safe void test_1_1(_Owned int * _Owned p) {    // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{conflicting types for 'test_1_1'}}
}

_Safe void test_1_2(int ** _Owned p);           // expected-note {{previous declaration is here}}
_Safe void test_1_2(_Owned int ** _Owned p) {    // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{conflicting types for 'test_1_2'}}
}

_Safe void test_2(int _Owned p);      // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-note {{previous declaration is here}}
_Safe void test_2(int p) {           // expected-error {{conflicting types for 'test_2'}}
}

_Safe int * test_3(int * _Owned p);
                                            // expected-note@-1 {{previous declaration is here}}
_Safe int * _Owned test_3(int * _Owned p) {    // expected-error {{conflicting types for 'test_3'}}
    return p;
}

_Safe int * _Owned test_3_0(int * _Owned p);                 // expected-note {{previous declaration is here}}
_Safe _Owned int * _Owned test_3_0(_Owned int * _Owned p) {    // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{conflicting types for 'test_3_0'}}
    return p;
}

_Safe int ** _Owned test_3_1(int ** _Owned p);                 // expected-note {{previous declaration is here}}
_Safe _Owned int ** _Owned test_3_1(_Owned int ** _Owned p) {    // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{conflicting types for 'test_3_1'}}
    return p;
}

_Safe int _Owned test_4(void);                // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-note {{previous declaration is here}}
_Safe int test_4(void) {                     // expected-error {{conflicting types for 'test_4'}}
    return 0;
}

_Safe void test_5(int *_Owned p);             // expected-note {{previous declaration is here}}
_Safe void test_5(int *_Borrow p) {           // expected-error {{conflicting types for 'test_5'}}
}

_Safe int * _Owned test_6(int *_Owned p);      // expected-note {{previous declaration is here}}
_Safe int * _Borrow test_6(int *_Borrow p) {   // expected-error {{conflicting types for 'test_6'}}
    return p;
}

_Safe void test_7(int * _Borrow p);           // expected-note {{previous declaration is here}}
_Safe void test_7(int * p) {
}                                           // expected-error@-1 {{conflicting types for 'test_7'}}

int * a;
_Safe int * _Borrow test_8(int * _Borrow p);   // expected-note {{previous declaration is here}}
_Safe int * test_8(int * _Borrow p) {
                                            // expected-error@-1{{conflicting types for 'test_8'}}
    return a;
}

_Safe void test_80(int *_Borrow p);           // expected-note {{previous declaration is here}}
_Safe void test_80(const int *_Borrow p) {    // expected-error{{conflicting types for 'test_80'}}
}

_Safe int *_Borrow test_81(int *_Borrow p);                // expected-note {{previous declaration is here}}
_Safe const int *_Borrow test_81(const int *_Borrow p) {   // expected-error{{conflicting types for 'test_81'}}
}

void test_9(int * _Owned p);   // expected-note {{previous declaration is here}}
void test_9(int * p) {    // expected-error{{conflicting types for 'test_9'}}
}

_Unsafe void test_9_0(int * _Owned p);     // expected-note {{previous declaration is here}}
void test_9_0(int * p) {       // expected-error{{function 'test_9_0' has incompatible _Safe and _Unsafe declarations}}
}

_Unsafe void test_9_1(int * _Owned p);// expected-note {{previous declaration is here}}
_Unsafe void test_9_1(int * p) {   // expected-error{{conflicting types for 'test_9_1'}}
}

void test_9_2(int * _Owned p);// expected-note {{previous declaration is here}}
void test_9_2(_Owned int * p) {// expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error{{conflicting types for 'test_9_2'}}
}

void test_10(int _Owned p);// expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-note {{previous declaration is here}}
void test_10(int p) {   // expected-error{{conflicting types for 'test_10'}}
}

int * _Owned test_11(int *p);// expected-note {{previous declaration is here}}
int * _Owned test_11(int *_Owned p) {   // expected-error{{conflicting types for 'test_11'}}
    return p;
}

int test_12(void);// expected-note {{previous declaration is here}}
int _Owned test_12(void) {   // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error{{conflicting types for 'test_12'}}
    return 0;
}

void test_13(int *_Owned p);// expected-note {{previous declaration is here}}
void test_13(int *_Borrow p) {  // expected-error{{conflicting types for 'test_13'}}
}

int * _Owned test_14(int *_Owned p);  // expected-note {{previous declaration is here}}
int * _Borrow test_14(int *_Borrow p) {   // expected-error{{conflicting types for 'test_14'}}
}

void test_15(int * _Borrow p);  // expected-note {{previous declaration is here}}
void test_15(int * p) {   // expected-error{{conflicting types for 'test_15'}}
}

int * _Borrow test_16(int * _Borrow p);  // expected-note {{previous declaration is here}}
int * test_16(int * _Borrow p) {    // expected-error{{conflicting types for 'test_16'}}
    return 0;
}

// test_17-20: Now valid as mixed mode declarations
_Safe int * _Borrow test_17(int * _Borrow p);
int * test_17(int * _Borrow p) {  // ok: mixed mode compatible
    return 0;
}

_Safe void test_18(int * _Borrow p);
void test_18(int * p) {  // ok: mixed mode compatible
}

_Safe void test_19(int * _Owned p);
void test_19(int * p) {  // ok: mixed mode compatible
}

_Safe int * _Owned test_20(int * _Owned p);
int * test_20(int * p) {  // ok: mixed mode compatible
    return 0;
}

int * _Borrow test_21(const int * _Borrow p);  // expected-note {{previous declaration is here}}
int * _Borrow test_21(int * _Borrow p) {    // expected-error{{conflicting types for 'test_21'}}
    return p;
}

void test_22(const int * _Borrow p);  // expected-note {{previous declaration is here}}
void test_22(const int * p) {    // expected-error{{conflicting types for 'test_22'}}
}
